# universal_compiler

./: CMakeLists.txt  README  README.md
AdHocCompiler/: CMakeLists.txt
AdHocCompiler/Generator/: CMakeLists.txt  Generator.cpp  Generator.h
AdHocCompiler/MicroParser/: CMakeLists.txt  MicroParser.cpp  MicroParser.h
AdHocCompiler/Scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h
AdHocCompiler/Test/: CMakeLists.txt  MicroParserTest.cpp  ScannerTest.cpp
AdHocCompiler/Token/: Token.cpp  Token.h
AdHocCompiler/include/: Generator.h  MicroParser.h  Scanner.h  Token.h
Common/: CMakeLists.txt
Common/Generator/: CMakeLists.txt  Generator.cpp  Generator.h  SymbolTable.cpp  SymbolTable.h
Common/Token/: CMakeLists.txt
MicroParser/: MicroParser.cpp  MicroParser.h
Scanner/: Scanner.cpp  Scanner.h
Test/: CMakeLists.txt  ScannerTest.cpp
UniversalCompiler/: CMakeLists.txt
UniversalCompiler/GrammerAnalyzer/: CMakeLists.txt  GrammerAnalyzer.cpp  GrammerAnalyzer.h
UniversalCompiler/MicroCompiler/: CMakeLists.txt  MicroCompiler.cpp  MicroCompiler.h
UniversalCompiler/ParserDriver/: CMakeLists.txt  ParserDriver.cpp  ParserDriver.h
UniversalCompiler/ParserDriverWithSemanticStack/: CMakeLists.txt  ParserDriverWithSemanticStack.cpp  ParserDriverWithSemanticStack.h
UniversalCompiler/PredictGenerator/: CMakeLists.txt  PredictGenerator.cpp  PredictGenerator.h
UniversalCompiler/Scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h
UniversalCompiler/TableGenerator/: CMakeLists.txt  TableGenerator.cpp  TableGenerator.h
UniversalCompiler/Test/: CMakeLists.txt  GrammerAnalyzerTest.cpp  MicroCompilerTest.cpp  ParserDriverTest.cpp  ParserDriverWithSemanticStackTest.cpp  PredictGeneratorTest.cpp  TableGeneratorTest.cpp
UniversalCompiler/include/: Generator.h  GrammerAnalyzer.h  MicroCompiler.h  ParserDriver.h  ParserDriverWithSemanticStack.h  PredictGenerator.h  TableGenerator.h  Token.h
include/: Generator.h  SymbolTable.h  Token.h
